# occhio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
experiments/: phase_change.ipynb  phase_change_correlated_multiple.ipynb  phase_change_correlated_simple.ipynb  phase_change_hierarchical_multiple.ipynb  phase_change_hierarchical_simple.ipynb  phase_change_multiple.ipynb  phase_change_test.ipynb
src/distributions/: __init__.py  base.py  correlated.py  hierarchical.py  relational.py  sparse.py
src/occhio/: __init__.py  autoencoder.py  model_grid.py  toy_model.py
src/occhio/autoencoders/: __init__.py  autoencoder.py  configs.py  factories.py  linear_autoencoder.py
src/occhio/datastream/: config.py
src/occhio/distributions/: README.md  __init__.py  base.py  correlated.py  dag.py  hierarchical.py  relational.py  sparse.py
src/occhio/distributions/tests/: test_correlated.py  test_dag.py  test_hierarchical.py  test_relational.py  test_sparse.py
src/occhio/examples/: __init__.py  autoencoders.py  causal_sae.py  density_sweep.py  hierarchical_sae.py  phase_change.py  rwtr.py  rwtr3.py  tmos.py
src/occhio/sae/: __init__.py  sae.py
src/occhio/scheduler/: __init__.py  box.py  zoo.py
src/occhio/scripts/: hierarchical_phase_transition.ipynb
src/occhio/toy_model/: toy_model.py
src/occhio/visualization/: export.py  phase_change.py
tests/: test_autoencoder.py  test_autoencoder_factories.py  test_box.py
