[project]
name = "occhio"
version = "0.2.0"
description = "Experiment with Toy Models of Superposition"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.10.0",
    "numpy>=2.2.6",
    "ipykernel>=7.2.0",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.0", "ty>=0.0.14"]

[tool.pytest.ini_options]
pythonpath = ["src"]
